# pywjs_explorer

./: .gitignore  auto_install.py  auto_run.py  auto_uninstall.py  auto_update.py
client/: index.html
client/css/: app.1d729b7a.css  app.dfd74798.css
client/js/: app.9530ba17.js  app.9530ba17.js.map  app.d6a80b64.js  app.d6a80b64.js.map  chunk-vendors.9d52f17c.js  chunk-vendors.9d52f17c.js.map  chunk-vendors.b2284454.js  chunk-vendors.b2284454.js.map
server/: logic.py  main.py  pyproject.toml  requirements.txt
vue/: package-lock.json  package.json  vue.config.js
vue/src/: App.vue  main.ts
vue/src/components/: console.vue  file.vue  ofileList.vue  pathos.vue  preview.vue
vue/src/store/: fileStore.ts  index.ts
